--- a/static/index.html
+++ b/static/index.html
@@ -2,23 +2,23 @@
 <html ng-app="runcode">
 <head>
 <title>Interactive JavaScript Tutorial</title>
-<link rel="icon" type="image/png" href="static/img/JavaScript-logo-64x64.png">
-<link rel="stylesheet" href="static/angular/angular-ui.min.css">
-<link rel="stylesheet" href="static/css/code.css">
-<link rel="stylesheet" href="static/codemirror/lib/codemirror.css">
-<link rel="stylesheet" href="static/codemirror/theme/neat.css">
-<script src="static/jquery/jquery-1.8.2.min.js"></script>
-<script src="static/codemirror/lib/codemirror.js"></script>
-<script src="static/codemirror/mode/xml/xml.js"></script>
-<script src="static/codemirror/mode/css/css.js"></script>
-<script src="static/codemirror/mode/htmlmixed/htmlmixed.js"></script>
-<script src="static/codemirror/mode/javascript/javascript.js"></script>
-<script src="static/angular/angular.min.js"></script>
-<script src="static/angular/angular-sanitize.min.js"></script>
-<script src="static/angular/angular-ui.min.js"></script>
-<script src="static/js/app.js"></script>
-<script src="static/js/filters.js"></script>
-<script src="static/js/controllers.js"></script>
+<link rel="icon" type="image/png" href="img/JavaScript-logo-64x64.png">
+<link rel="stylesheet" href="angular/angular-ui.min.css">
+<link rel="stylesheet" href="css/code.css">
+<link rel="stylesheet" href="codemirror/lib/codemirror.css">
+<link rel="stylesheet" href="codemirror/theme/neat.css">
+<script src="jquery/jquery-1.8.2.min.js"></script>
+<script src="codemirror/lib/codemirror.js"></script>
+<script src="codemirror/mode/xml/xml.js"></script>
+<script src="codemirror/mode/css/css.js"></script>
+<script src="codemirror/mode/htmlmixed/htmlmixed.js"></script>
+<script src="codemirror/mode/javascript/javascript.js"></script>
+<script src="angular/angular.min.js"></script>
+<script src="angular/angular-sanitize.min.js"></script>
+<script src="angular/angular-ui.min.js"></script>
+<script src="js/app.js"></script>
+<script src="js/filters.js"></script>
+<script src="js/controllers.js"></script>
 </head>
 <body ng-controller="CodeCtrl">
 <div id="content_container" ng-class="{'collapsed': contentCollapsed}">
