Added links to other game engines.

--- a/static/index.html
+++ b/static/index.html
@@ -2741,6 +2741,10 @@
       everything with your web page easier. There are others like it, but it
       is probably the most common and comprehensive: http://jquery.com.
 
+    - Everyone uses libraries for games, too. Check out http://impactjs.com,
+      http://craftyjs.com, http://gameclosure.com, or http://isogenicengine.com
+      if you really want to build games in JavaScript.
+
     - Speaking of libraries, **AngularJS** is top notch. It makes building web
       sites like this one a whole lot easier, and is well worth the time
       investment to learn. Additionally, learning something like AngularJS is a
