Added graphic and sound links.

--- a/static/index.html
+++ b/static/index.html
@@ -2743,7 +2743,9 @@
 
     - Everyone uses libraries for games, too. Check out http://impactjs.com,
       http://craftyjs.com, http://gameclosure.com, or http://isogenicengine.com
-      if you really want to build games in JavaScript.
+      if you really want to build games in JavaScript. For free images and
+      sound, see http://lostgarden.com and http://freesound.org. The internet
+      is full of wonders.
 
     - Speaking of libraries, **AngularJS** is top notch. It makes building web
       sites like this one a whole lot easier, and is well worth the time
