Fixed a logical error in a slide.

--- a/static/index.html
+++ b/static/index.html
@@ -555,10 +555,10 @@
   <div name="Equality, Null, and Ordering">
     Things are **equal** to each other if they have the _same values_. In
     JavaScript, testing for equality is done using the |==| operator, and
-    inequality is tested with |!=|. As you might expect, |10 != "10"| (one is a
-    Number, the other is a String), but |10 == 5 + 5| (both sides are numbers
-    with the same value). The value of these operations is a *boolean value*,
-    one of **true** or **false**.
+    inequality is tested with |!=|. As you might expect, |true != "true"| (one
+    is a Boolean value, the other is a String), but |10 == 5 + 5| (both sides
+    are numbers with the same value). The value of these operations is a
+    *boolean value*, one of **true** or **false**.
 
     With variables, things get a little bit more interesting. Suppose you have
     two index cards, each with the number |5| on them. Each card is a
