--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,11 @@
 <link rel="stylesheet" href="css/code.css">
 <link rel="stylesheet" href="codemirror-5.3/lib/codemirror.css">
 <link rel="stylesheet" href="codemirror-5.3/theme/neat.css">
+<link rel="stylesheet" href="codemirror-5.3/addon/merge/merge.css">
 <script src="jquery/jquery-1.8.2.min.js"></script>
+<script src="diff_match_patch/diff_match_patch.js"></script>
 <script src="codemirror-5.3/lib/codemirror.js"></script>
+<script src="codemirror-5.3/addon/merge/merge.js"></script>
 <script src="codemirror-5.3/mode/javascript/javascript.js"></script>
 <script src="angular/angular.min.js"></script>
 <script src="angular/angular-sanitize.min.js"></script>
