--- a/static/index.html
+++ b/static/index.html
@@ -1243,7 +1243,7 @@
         i++;
       }
 
-    The |for| loop is more compact and puts important inforamtion (like how the
+    The |for| loop is more compact and puts important information (like how the
     condition is ever going to become false) right up front where you can
     glance at it. For these reasons, it is the most popular loop in JavaScript
     by far.
