Code no longer saves in diff view.
This was causing weird data loss. Also, the user code is no longer
stored in the tutorials array, so clearing the saved code actually works
now.

--- a/static/index.html
+++ b/static/index.html
@@ -19,10 +19,10 @@
 <script src="js/controllers.js"></script>
 </head>
 <body ng-controller="CodeCtrl">
-<div id="diff" ng-class="{'hidden': !diffChapter}">
+<div id="diff" ng-class="{'hidden': !inDiff}">
   <div id="diffview"></div>
 </div>
-<div id="main-tour" ng-class="{'hidden': diffChapter}">
+<div id="main-tour" ng-class="{'hidden': inDiff}">
 <div id="content_container" ng-class="{'collapsed': contentCollapsed}">
   <div id="toc-trigger">
     <a href="http://developer.mozilla.org/">MDN Docs</a> |
