Fixed missing word in break/continue slide.

--- a/static/index.html
+++ b/static/index.html
@@ -1389,7 +1389,7 @@
     |continue| keyword instructs it to "go back to the beginning of the loop,
     skipping the rest of its body."
 
-    The code window shows examples of these statements work. They are both
+    The code window shows examples of how these statements work. They are both
     pretty useful, but you will tend to see |break| a lot more frequently.
 
     Of course, if you are in a loop within a function, you can also call
