--- a/static/index.html
+++ b/static/index.html
@@ -1888,7 +1888,7 @@
 
     - The code in the code window only shows a single rectangle, and the
       animation frame is only requested once. Request another animation frame
-      from within |step| to make it keep geneating rectangles.
+      from within |step| to make it keep generating rectangles.
 
     --
 
