--- a/static/index.html
+++ b/static/index.html
@@ -453,7 +453,7 @@
     addition to taking arguments _in_, they also send values _out_. To obtain
     the returned value of a function, just use that function call in place of a
     value, e.g., |a = Math.sqrt(4)| or |alert(Math.ceil(1.5))|. You can
-    think of it replacment: the whole function, including it's name,
+    think of it as replacment: the whole function, including it's name,
     parentheses, and arguments, is replaced with the value it returns.
 
     You can call some functions with more than one value. In that case, supply
