--- a/static/index.html
+++ b/static/index.html
@@ -246,7 +246,7 @@
     tutorial). A variable can contain any kind of value.
 
     **Note:** when errors occur in your program, like the reference to the
-    nonexistent variable `i_dont_exist` in the example code, the program will
+    nonexistent variable |i_dont_exist| in the example code, the program will
     stop running at that point and the interpreter will give up. Any code after
     the error is ignored and won't run.
 
